dev/soludev/openobserve/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openobserve-openobserve-standalone
  namespace: soludev
  labels:
    app: openobserve
    app.kubernetes.io/name: openobserve-standalone
    app.kubernetes.io/part-of: soludev-workload
spec:
  serviceName: openobserve-openobserve-standalone-headless
  replicas: 1
  selector:
    matchLabels:
      app: openobserve
  template:
    metadata:
      labels:
        app: openobserve
        app.kubernetes.io/name: openobserve-standalone
        app.kubernetes.io/part-of: soludev-workload
    spec:
      securityContext:
        runAsUser: 10000
        runAsGroup: 2000
        fsGroup: 2000
      containers:
        - name: openobserve
          image: o2cr.ai/openobserve/openobserve:v0.80.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5080
              protocol: TCP
            - name: grpc
              containerPort: 5081
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: wal
              mountPath: /data-wal
            - name: cache
              mountPath: /data-cache
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "1500m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5080
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5080
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          startupProbe:
            httpGet:
              path: /healthz
              port: 5080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
      volumes:
        - name: data
          emptyDir: {}
        - name: wal
          emptyDir: {}
        - name: cache
          emptyDir:
            sizeLimit: 2Gi
