dev/soludev/openobserve/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openobserve-openobserve-standalone
  namespace: soludev
  labels:
    app: openobserve
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5080
      targetPort: 5080
      protocol: TCP
    - name: grpc
      port: 5081
      targetPort: 5081
      protocol: TCP
  selector:
    app: openobserve
---
apiVersion: v1
kind: Service
metadata:
  name: openobserve-openobserve-standalone-headless
  namespace: soludev
  labels:
    app: openobserve
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 5080
      targetPort: 5080
      protocol: TCP
    - name: grpc
      port: 5081
      targetPort: 5081
      protocol: TCP
  selector:
    app: openobserve
